// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RuleLibrary/> render should filter cards for the library 1`] = `
<div
  class="container"
>
  <div
    class="libraryHeader autoResponders"
  >
    <div>
      <h1>
        <i
          class="material-icons mr-2"
        >
          auto_awesome
        </i>
        Autoresponders
      </h1>
      <p>
        Install autoresponders to leverage AI to resolve tickets. Available only to Automate subscribers.
      </p>
    </div>
    <div>
      <div>
        <div
          class="d-flex align-items-center upgradeLink"
        >
          <button
            aria-disabled="false"
            class="wrapper fill primary medium"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                bolt
              </i>
              Get Automate Features
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="libraryHeader ruleTemplates"
  >
    <h1>
      Rule Templates
    </h1>
    <p>
      Install and adapt rule templates to streamline your team’s workflow.
    </p>
    <a
      href="https://docs.gorgias.com/en-US/rule-library-new-81974"
      rel="noreferrer"
      target="_blank"
    >
      <i
        class="material-icons mr-2"
      >
        menu_book
      </i>
      Learn About Rule Templates
    </a>
  </div>
  <div
    class="card"
  >
    <div
      class="header"
    >
      <span
        class="badge badge-secondary"
        style="color: rgb(0, 121, 107); background-color: rgb(234, 255, 239);"
      >
        Auto Tag
      </span>
    </div>
    <div
      class="content"
    >
      <div
        class="title"
      >
        my rule
      </div>
      <div
        class="description"
      >
        foo
      </div>
    </div>
    <div>
      <div
        class="ticketCount"
      >
        Target up to 
        0
         tickets/month
      </div>
    </div>
  </div>
</div>
`;

exports[`<RuleLibrary/> render should render cards for the library 1`] = `
<div
  class="container"
>
  <div
    class="libraryHeader autoResponders"
  >
    <div>
      <h1>
        <i
          class="material-icons mr-2"
        >
          auto_awesome
        </i>
        Autoresponders
      </h1>
      <p>
        Install autoresponders to leverage AI to resolve tickets. Available only to Automate subscribers.
      </p>
    </div>
    <div>
      <div>
        <div
          class="d-flex align-items-center upgradeLink"
        >
          <button
            aria-disabled="false"
            class="wrapper fill primary medium"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                bolt
              </i>
              Get Automate Features
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="libraryHeader ruleTemplates"
  >
    <h1>
      Rule Templates
    </h1>
    <p>
      Install and adapt rule templates to streamline your team’s workflow.
    </p>
    <a
      href="https://docs.gorgias.com/en-US/rule-library-new-81974"
      rel="noreferrer"
      target="_blank"
    >
      <i
        class="material-icons mr-2"
      >
        menu_book
      </i>
      Learn About Rule Templates
    </a>
  </div>
  <div
    class="card"
  >
    <div
      class="header"
    >
      <span
        class="badge badge-secondary"
        style="color: rgb(148, 17, 181); background-color: rgb(237, 234, 255);"
      >
        Auto Close
      </span>
    </div>
    <div
      class="content"
    >
      <div
        class="title"
      >
        my rule
      </div>
      <div
        class="description"
      >
        foo
      </div>
    </div>
    <div>
      <div
        class="ticketCount"
      >
        Target up to 
        0
         tickets/month
      </div>
    </div>
  </div>
  <div
    class="card"
  >
    <div
      class="header"
    >
      <span
        class="badge badge-secondary"
        style="color: rgb(0, 121, 107); background-color: rgb(234, 255, 239);"
      >
        Auto Tag
      </span>
    </div>
    <div
      class="content"
    >
      <div
        class="title"
      >
        my rule
      </div>
      <div
        class="description"
      >
        foo
      </div>
    </div>
    <div>
      <div
        class="ticketCount"
      >
        Target up to 
        0
         tickets/month
      </div>
    </div>
  </div>
</div>
`;
